# single-token-farm

./: README.md
contract/: Cargo.toml  README.md
contract/src/: lib.rs  view.rs
frontend/: .env-example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: Balance.tsx  RPCSelector.tsx  RewardAmount.tsx
frontend/src/components/PageContainer/: PageContainer.component.tsx
frontend/src/components/TokenList/: index.tsx
frontend/src/components/TokenSelector/: index.tsx
frontend/src/components/modules/farms/: AddReward.tsx  AllFarms.tsx  CreateFarm.tsx  Farm.tsx  FarmContainer.tsx  RewardTabs.tsx  RewardTokenList.tsx  StakeModal.tsx  Token.tsx  TokenIcon.tsx  UnstakeModal.tsx
frontend/src/components/shared/: error-toast.tsx  header.tsx  search.tsx  simple-select.tsx  success-toast.tsx  top-card.tsx  wallet.tsx
frontend/src/context/: wallet-selector.tsx
frontend/src/hooks/: theme.ts
frontend/src/hooks/modules/farms/: hooks.ts
frontend/src/modals/wallet-selector/: modal.tsx
frontend/src/pages/: index.tsx
frontend/src/pages/farms/: [id].tsx
frontend/src/stores/: rpc-store.tsx
frontend/src/tools/modules/transactions/: index.ts
frontend/src/utils/: account-ids.ts  balances.ts  config.ts  conversion.ts  pool-utils.ts  rpc.ts  tokens.ts
