[package]
name = "single-token-farm"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/NearSpeedBuild/single-token-farm"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.13.6-rust-1.86.0"
image_digest = "sha256:589c460a6dd7c66656206ab8fc94db5d74d10feb4126af26e7c67ad0407086b8"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[dependencies]
near-sdk = "5.12.0"
near-contract-standards = "5.12.0"
serde_json = "1"

[dev-dependencies]
near-sdk = { version = "5.7", features = ["unit-testing"] }
near-workspaces = "0.17.0"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
borsh = "1.5.3"

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
